--- a/pom.xml
+++ b/pom.xml
@@ -10,17 +10,26 @@
 
     <properties>
         <junit-version>4.12</junit-version>
-        <spring-version>4.3.2.RELEASE</spring-version>
-        <mybatis-version>3.4.1</mybatis-version>
-        <mybatis-spring-version>1.3.0</mybatis-spring-version>
-        <druid-version>1.0.24</druid-version>
-        <fastjson-version>1.2.16</fastjson-version>
+        <spring-version>4.3.11.RELEASE</spring-version>
+        <mybatis-version>3.4.5</mybatis-version>
+        <mybatis-spring-version>1.3.1</mybatis-spring-version>
+        <druid-version>1.1.3</druid-version>
+        <fastjson-version>1.2.38</fastjson-version>
         <mysql-connection-version>5.1.6</mysql-connection-version>
         <mybatis-generator-version>1.3.2</mybatis-generator-version>
         <pagehelper-version>4.0.1</pagehelper-version>
         <slf4j-version>1.7.12</slf4j-version>
         <log4j-version>1.2.17</log4j-version>
     </properties>
+
+    <!--use aliyun maven repo-->
+    <repositories>
+        <repository>
+            <id>nexus-aliyun</id>
+            <name>Nexus aliyun</name>
+            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
